<resources>
    <string name="app_name">My Application</string>
    <string name="confetti_icon">Confetti Icon</string>
    <string name="back">Back</string>
    <string name="my_cart">My Cart</string>
    <string name="rose_plant">Rose Plant</string>
    <string name="lkr_3_000_00">LKR 3,000.00</string>
    <string name="Dash">-</string>
    <string name="plus">+</string>
    <string name="total_price_lkr_3_000_00">Total Price: LKR 3,000.00</string>
    <string name="proceed_to_checkout">Proceed to Checkout</string>
    <string name="planty_life">Planty Life</string>
    <string name="order_your_favorite_plants">Order Your Favorite Plants! 🌿</string>
    <string name="search">Search</string>
    <string name="back1">Back</string>
    <string name="desk_plants">Desk Plants</string>
    <string name="cactus_01">Cactus 01</string>
    <string name="lkr_3_500_00">LKR 3 500.00</string>
    <string name="cactus_02">Cactus 02</string>
    <string name="cactus_03">Cactus 03</string>
    <string name="lkr_2_800_00">LKR 2 800.00</string>
    <string name="cactus_04">Cactus 04</string>
    <string name="cactus_05">Cactus 05</string>
    <string name="lkr_4_200_00">LKR 4 200.00</string>
    <string name="lkr_1_000_00">LKR 1 000.00</string>
    <string name="cactus_07">Cactus 07</string>
    <string name="lkr_2_000_00">LKR 2 000.00</string>
    <string name="cactus_08">Cactus 08</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="lihini_athukorala">Lihini Athukorala</string>
    <string name="name">Name :</string>
    <string name="e_mail">E-Mail :</string>
    <string name="lihini0511_gmail_com">lihini0511@gmail.com</string>
    <string name="address">Address :</string>
    <string name="_200_ihalayagoda_gampaha">200, Ihalayagoda, Gampaha</string>
    <string name="save_changes">Save Changes</string>
    <string name="cancel">Cancel</string>
    <string name="flower_plants">Flower Plants</string>
    <string name="sun_flower">Sun Flower</string>
    <string name="lkr_6_200_00">LKR 6 200.00</string>
    <string name="orchid">Orchid</string>
    <string name="lkr_5_000_00">LKR 5 000.00</string>
    <string name="rose">Rose</string>
    <string name="lavender">Lavender</string>
    <string name="hydrangeas">Hydrangeas</string>
    <string name="lkr_23_000_00">LKR 23 000.00</string>
    <string name="gardenia">Gardenia</string>
    <string name="lkr_4_000_00">LKR 4 000.00</string>
    <string name="tulip">Tulip</string>
    <string name="lkr_1_200_00">LKR 1 200.00</string>
    <string name="peace_lily">Peace Lily</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_your_email_address_and_we_ll_send_you_instructions_to_reset_your_password">Enter your email address and we\'ll send you instructions to reset your password.</string>
    <string name="enter_your_email">Enter your email</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="return_to_login">Return to Login</string>
    <string name="indoor_plants">Indoor Plants</string>
    <string name="snake_plant">Snake Plant</string>
    <string name="lkr_1_700_00">LKR 1 700.00</string>
    <string name="spider_plant">Spider Plant</string>
    <string name="lkr_1_500_00">LKR 1 500.00</string>
    <string name="aloe_vera">Aloe Vera</string>
    <string name="lkr_1_300_00">LKR 1 300.00</string>
    <string name="bonsai">Bonsai</string>
    <string name="lkr_25_000_00">LKR 25 000.00</string>
    <string name="pothos">Pothos</string>
    <string name="ficus">Ficus</string>
    <string name="bic_plant">Bic Plant</string>
    <string name="lkr_6_000_00">LKR 6 000.00</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="enter_your_details_to_continue">Enter your details to continue</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">Log In</string>
    <string name="or">OR</string>
    <string name="google_login">Google Login</string>
    <string name="apple_login">Apple Login</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="design_your_green_space">Design Your Green Space</string>
    <string name="inspire_users_to_create_their_dream_indoor_jungle_with_layout_suggestions_companion_planting_tips_and_care_guides_for_different_spaces">Inspire users to create their dream indoor jungle with layout suggestions, companion planting tips, and care guides for different spaces.</string>
    <string name="next">Next</string>
    <string name="plant_and_breathe">Plant And Breathe</string>
    <string name="let_s_together_make_the_world_ngreen_again">Let\'s together make the world\ngreen again.</string>
    <string name="plant_a_tree_for_life">Plant a tree for life</string>
    <string name="worldwide_delivery_nwithin_10_15_days">Worldwide delivery\nwithin 10-15 days.</string>
    <string name="get_started">Get Started</string>
    <string name="croton_plant">Croton Plant</string>
    <string name="lkr_7_500_00">LKR 7 500.00</string>
    <string name="coleus_plant">Coleus Plant</string>
    <string name="lkr_6_500_00">LKR 6 500.00</string>
    <string name="bromeliad_plant">Bromeliad Plant</string>
    <string name="lkr_10_300_00">LKR 10 300.00</string>
    <string name="foxtail_fern">Foxtail fern</string>
    <string name="creeping_jenny">creeping jenny</string>
    <string name="bamboo">Bamboo</string>
    <string name="lkr_8_500_00">LKR 8 500.00</string>
    <string name="boxwood_plant">Boxwood Plant</string>
    <string name="payment">Payment</string>
    <string name="credit_card">Credit Card</string>
    <string name="card_number">Card Number</string>
    <string name="mm_yy">MM/YY</string>
    <string name="cvc">CVC</string>
    <string name="paypal">PayPal</string>
    <string name="apple_pay">Apple Pay</string>
    <string name="order_total_lkr_1_500_00">Order Total: LKR 1 500.00</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="user_profile">User Profile</string>
    <string name="to_pay">To Pay</string>
    <string name="to_ship">To Ship</string>
    <string name="to_receive">To Receive</string>
    <string name="to_review">To Review</string>
    <string name="log_out">Log Out</string>
    <string name="edit">Edit</string>
    <string name="create_account">Create Account</string>
    <string name="get_started_with_greenthumb">Get started with GreenThumb</string>
    <string name="enter_your_first_name">Enter your first name</string>
    <string name="enter_your_last_name">Enter your last name</string>
    <string name="create_a_password">Create a password</string>
    <string name="password_requirements">Password requirements:</string>
    <string name="at_least_8_characters_n_one_uppercase_letter_n_one_number_or_symbol">- At least 8 characters\n- One uppercase letter\n- One number or symbol</string>
    <string name="i_agree_to_the_terms_of_service_and_privacy_policy">I agree to the Terms of Service and Privacy Policy</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_have_an_account_log_in">Already have an account? Log In</string>
    <string name="home">Home</string>
    <string name="wishlist">Wishlist</string>
    <string name="setting">Setting</string>
    <string name="payment_successfully">Payment Successfully !</string>
    <string name="can_you_get_you_order_within_5_days">Can you get you order within 5 Days</string>
    <string name="back_to_home">Back to Home</string>
    <string name="outdoor_plants">Outdoor Plants</string>
</resources>