<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@color/light_green"
    tools:context=".ConfirmActivity">

    <!-- Confetti Image -->
    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/confetti_icon"
        android:src="@drawable/order"/>

    <!-- Welcome Text -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_successfully"
        android:textSize="24sp"
        android:textColor="#333333"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="16dp"/>

    <!-- Subtext -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/can_you_get_you_order_within_5_days"
        android:textSize="14sp"
        android:textColor="#3B4B3B"
        android:gravity="center"
        android:layout_marginTop="8dp"/>

    <!-- Button -->
    <Button
        android:id="@+id/btnhme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_to_home"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/dark_green"
        android:layout_marginTop="24dp"
        android:paddingStart="32dp"
        android:paddingEnd="32dp"/>
</LinearLayout>
